--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -6,19 +6,21 @@ body {
   justify-content: center;
   gap: 30px;
   font-family: sans-serif;
+  display: flex;
 }
 
 .menu {
+  height: 700px;
   margin-top: 40px;
   color: white;
   display: flex;
+  flex-wrap: wrap;
   flex-direction: column;
   background-color: #202b3b;
-  padding: 10px;
+  padding: 5px;
   align-items: center;
   letter-spacing: 1.5px;
   border-radius: 10px;
-  gap: 30px;
   font-size: 12px;
 }
 .menu span {
@@ -32,6 +34,8 @@ body {
   display: flex;
   gap: 5px;
   flex-direction: column;
+  align-items: center;
+  cursor: pointer;
 }
 
 .container {
@@ -42,6 +46,8 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-bottom: 0px;
+  justify-content: space-between;
   gap: 20px;
 }
 .container .search {
@@ -57,33 +63,13 @@ body {
   padding: 10px;
   letter-spacing: 1.5px;
   border-radius: 10px;
+  color: white;
 }
 .container .search input::-moz-placeholder {
   color: white;
 }
 .container .search input::placeholder {
   color: white;
-}
-.container .top {
-  display: flex;
-  width: 80%;
-  justify-content: space-between;
-  flex-wrap: wrap;
-}
-.container .top .info {
-  display: flex;
-  flex-direction: column;
-}
-.container .top .info h2 {
-  font-size: 24px;
-  margin-bottom: 10px;
-}
-.container .top .info .rain_chance {
-  font-size: 12px;
-  margin-bottom: 40px;
-}
-.container .top .info .temperature {
-  font-size: 36px;
 }
 .container .middle {
   width: 100%;
@@ -97,28 +83,34 @@ body {
 .container .middle .cards {
   margin-top: 20px;
   display: flex;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+}
+.container .middle .cards .block {
+  display: flex;
+  align-items: center;
   justify-content: space-between;
 }
-.container .middle .cards .card {
+.container .middle .cards .block .card {
   padding: 15px;
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 10px;
 }
-.container .middle .cards .card .time {
+.container .middle .cards .block .card .time {
   font-size: 12px;
 }
-.container .middle .cards .card .temperature {
+.container .middle .cards .block .card .temperature {
   font-size: 18px;
 }
 .container .bottom {
   width: 100%;
   background-color: #202b3b;
-  padding: 20px;
   border-radius: 10px;
 }
 .container .bottom .bottom_top {
+  padding: 20px 20px 0px 20px;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -128,57 +120,328 @@ body {
 }
 .container .bottom .bottom_top .see_more {
   background-color: #0095ff;
-  padding: 5px;
+  padding: 10px;
   border-radius: 10px;
   border: none;
   color: white;
   outline: none;
+  cursor: pointer;
 }
-.container .bottom .bottom_bottom {
+.container .bottom .air_conditions {
   display: flex;
-  gap: 100px;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
 }
-.container .bottom .bottom_bottom .feature {
-  margin: 20px;
+.container .bottom .air_conditions .feature {
+  margin: 15px;
   display: flex;
   flex-direction: column;
-  margin-bottom: 20px;
+  width: 180px;
 }
-.container .bottom .bottom_bottom .feature .icon_and_feature {
+.container .bottom .air_conditions .feature .cond_temp,
+.container .bottom .air_conditions .feature .cond_rain,
+.container .bottom .air_conditions .feature .cond_wind,
+.container .bottom .air_conditions .feature .cond_uv_index {
+  font-size: 24px;
+  text-align: left;
+}
+.container .bottom .air_conditions .feature .icon_and_feature {
   display: flex;
   gap: 10px;
   margin-bottom: 10px;
   align-items: center;
 }
 
-.forecast {
+.top {
+  display: flex;
+  width: 100%;
+  justify-content: space-around;
+  flex-wrap: wrap;
+}
+.top .info {
+  display: flex;
+  flex-direction: column;
+}
+.top .info h2 {
+  font-size: 24px;
+  margin-bottom: 10px;
+}
+.top .info .avg_humidity {
+  font-size: 12px;
+  margin-bottom: 40px;
+}
+.top .info .temperature {
+  font-size: 36px;
+}
+
+.sidebar {
+  height: 700px;
   margin-top: 40px;
   color: white;
   font-size: 12px;
   letter-spacing: 1.5px;
-  background-color: #202b3b;
   border-radius: 10px;
   padding: 20px;
-}
-.forecast .cards {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
 }
-.forecast .cards .card {
-  margin-top: 60px;
+.sidebar .today_forecast {
+  border-radius: 10px;
+  padding: 15px;
+  color: white;
+  font-size: 12px;
+  letter-spacing: 1.5px;
+  flex-shrink: 0;
+}
+.sidebar .today_forecast_list {
+  display: flex;
+  justify-content: space-evenly;
+  margin-top: 20px;
+  font-size: 12px;
+  letter-spacing: 1.5px;
+  color: white;
+  padding: 2px;
+}
+.sidebar .today_forecast_item {
+  flex-direction: column;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.sidebar.gray {
+  background-color: #202b3b;
+}
+
+.sidebar.no_padding {
+  padding: 0;
+}
+.sidebar.no_padding > * {
+  padding: 20px;
+  border-radius: 10px;
+}
+.sidebar.no_padding > *:not(:last-child) {
+  margin-bottom: 15px;
+}
+
+.sidebar.gray_children {
+  padding: 0;
+}
+.sidebar.gray_children > * {
+  background-color: #202b3b;
+}
+
+.week_forecast {
+  flex-grow: 1;
+}
+
+.week_forecast_list {
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+}
+
+.week_forecast_item {
+  margin-top: 15px;
+  padding-bottom: 15px;
   display: flex;
   flex-direction: row;
-  gap: 40px;
+  justify-content: space-between;
   position: relative;
+  align-items: center;
 }
-.forecast .cards .card::after {
+.week_forecast_item:not(:last-of-type) {
+  border-bottom: 1px solid #2a384c;
+}
+
+.week_forecast_list.small .week_forecast_item {
+  margin-top: 2px;
+  padding-bottom: 2px;
+}
+
+.see_more_features {
+  margin-top: 10px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: center;
+  gap: 20px;
+}
+.see_more_features .feature {
+  display: flex;
+  flex-direction: column;
+  width: 200px;
+  background-color: #202b3b;
+  padding: 20px;
+  border-radius: 10px;
+  flex-grow: 1;
+}
+.see_more_features .feature .cond_temp,
+.see_more_features .feature .cond_rain,
+.see_more_features .feature .cond_wind,
+.see_more_features .feature .cond_uv_index {
+  font-size: 24px;
+  text-align: left;
+}
+.see_more_features .feature .icon_and_feature {
+  display: flex;
+  gap: 10px;
+  margin-bottom: 10px;
+  align-items: center;
+}
+.see_more_features .feature .value {
+  padding-left: 47px;
+}
+
+.future {
+  background-color: #202b3b;
+  border-radius: 10px;
+  padding: 15px;
+  color: white;
+  font-size: 12px;
+  letter-spacing: 1.5px;
+}
+.future .card {
+  margin-top: 10px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  position: relative;
+  align-items: center;
+}
+.future .card .icon_description {
+  display: flex;
+  align-items: center;
+  padding: 0px 5px;
+}
+.future .card::after {
   content: "";
   display: block;
-  width: 280px;
+  width: 200px;
   height: 1px;
   background: #2a384c;
   left: 0;
-  bottom: -20px;
+  bottom: 0;
   position: absolute;
+}
+
+.cities_container {
+  justify-content: flex-start;
+  height: 700px;
+}
+.cities_container .cities_block {
+  color: white;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.city_block {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: #202b3b;
+  padding: 20px;
+  border-radius: 10px;
+  letter-spacing: 1.5px;
+  cursor: pointer;
+}
+.city_block .icon_city_time {
+  display: flex;
+  gap: 20px;
+  align-items: center;
+}
+.city_block .icon_city_time .city_time {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.city_block .icon_city_time .city_time .city {
+  font-size: 24px;
+}
+.city_block .icon_city_time .city_time .time {
+  font-size: 12px;
+}
+.city_block .temp {
+  font-size: 36px;
+  padding-left: 20px;
+}
+
+.map_container {
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+}
+
+.scroll {
+  overflow-y: auto;
+  max-height: 900px;
+}
+.scroll::-webkit-scrollbar {
+  width: 10px;
+}
+.scroll::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px #6a7d97;
+  border-radius: 10px;
+}
+.scroll::-webkit-scrollbar-thumb {
+  background: #0461a5;
+  border-radius: 10px;
+}
+
+.map_container .map {
+  width: 100%;
+  height: 100%;
+}
+
+.city_on_map {
+  color: white;
+  background-color: rgba(32, 43, 59, 0.85);
+  border: none;
+  border-radius: 10px;
+  height: 130px;
+  min-width: 100px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.loader {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+  background-color: #000;
+  opacity: 0.6;
+  z-index: 100;
+}
+
+.loader .spinner {
+  border: 12px solid #f3f3f3;
+  border-radius: 50%;
+  border-top: 12px solid #444444;
+  width: 70px;
+  height: 70px;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  100% {
+    transform: rotate(360deg);
+  }
+}
+.visible {
+  display: block;
+}
+
+.hidden {
+  display: none;
 }/*# sourceMappingURL=index.css.map */
